--- a/.htaccess
+++ b/.htaccess
@@ -4,4 +4,5 @@ RewriteBase /
 RewriteRule ^mous/page/(.*)$ /index.php?mous=&page=$1
 RewriteRule ^mous/(.*)/page/(.*)$ /index.php?mous=$1&page=$2
 RewriteRule ^mous/(.*)$ /index.php?mous=$1&page=1
+RewriteRule ^pages/(.*)$ /index.php?pages=$1
 </IfModule>
